@@ -7,6 +7,7 @@ Jump Start Changelog
 * Fixed: Polylang plugin errors when translating post.
 * Fixed: Put back accidentally removed themeblvd_footer_above action (but deprecated).
 * Fixed: Occasional display issues on archives and search results, due to `is_page_template()` bug in WordPress 4.7.
+* Fixed: Minor styling quirks on tablet transparent header menu icons.
 
 --------------------------------------------------------------
 
